# Python-lab

./: .coverage  README.md  calculator.html  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  pytest.ini  python lab.py  search.html  searchindex.js  tox.ini
.github/workflows/: main.yml
checkio/: python lab.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  modules.doctree
docs/_build/html/: modules.html  objects.inv  py-modindex.html  searchindex.js
doctrees/: calculator.doctree  index.doctree
html/: .buildinfo  calculator.html  genindex.html  index.html  search.html
src/: calculator.py
tests/: __init__.py  test_calculator.py
