[tool.poetry]
name = "checkio"
version = "0.1.0"
description = "demo poetry"
authors = ["NotASpam <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"
tox = "^4.20.0"
mypy = "^1.11.2"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.6.7"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
